# kaleielak

./: .gitmodules  CMakeLists.txt  README
src/: CMakeLists.txt  arc.hh  circle.hh  color.hh  fft.hh  julia.cc  julia.hh  kaleielak.cc  kaleielak.hh  main.cc  mandelbrot.cc  mandelbrot.hh  node.hh  palette.hh  pixel.hh  point.hh  rectangle.hh  repeat.hh  rosace.hh  rotation.hh  scene-factory.cc  scene-factory.hh  scene.hh  transform.hh  value.hh  video-encoder.cc  video-encoder.hh  xcb-output.cc  xcb-output.hh
src/scenes/: audio-meter.cc  audio-meter.hh  circles1.cc  circles1.hh  endless-knot.cc  endless-knot.hh  golden-flower.cc  golden-flower.hh  golden-spiral.cc  golden-spiral.hh  julia1.cc  julia1.hh  mandala1.hh  mandel1.cc  mandel1.hh
